deployment prepare